cmake_minimum_required(VERSION 3.31)
project(PTIT_CNTT4_IT103 C)

set(CMAKE_C_STANDARD 11)

add_executable(PTIT_CNTT4_IT103 main.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai02.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai01.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai03.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai04.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai05.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai06.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai07.c
        PTIT_CNTT4_IT201_Session01/PTIT_CNTT4_IT201_Session01_Bai08.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_BTTH.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai08.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai02.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai03.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai04.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai05.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai06.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai07.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session02_Bai01.c
        PTIT_CNTT4_IT201_Session02/PTIT_CNTT4_IT201_Session2_Bai10.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai01.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai02.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai03.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai04.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai05.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai06.c
        PTIT_CNTT4_IT201_Session03/PTIT_CNTT4_IT201_Session03_Bai07.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai01.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai02.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai03.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai04.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai05.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai06.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai07.c
        PTIT_CNTT4_IT201_Session04/PTIT_CNTT4_IT201_Session04_Bai08.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai01.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai02.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai03.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai04.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai05.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai08.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai06.c
        PTIT_CNTT4_IT201_Session05/PTIT_CNTT4_IT201_Session05_Bai07.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai01.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai02.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai03.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai04.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai05.c
        PTIT_CNTT4_IT201_Session06/PTIT_CNTT4_IT201_Session06_Bai06.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai06.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai02.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai03.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai04.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai05.c
        PTIT_CNTT4_IT201_Session07/PTIT_CNTT4_IT201_Session07_Bai01.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai01.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai02.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai03.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai04.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai05.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai06.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai07.c
        PTIT_CNTT4_IT201_Session08/PTIT_CNTT4_IT201_Session08_Bai08.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai01.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai02.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai03.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai04.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai05.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai06.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai07.c
        PTIT_CNTT4_IT201_Session09/PTIT_CNTT4_IT201_Session09_Bai08.c
        PTIT_CNTT4_IT201_Session10/test.c
        PTIT_CNTT4_IT201_Session10/PTIT_CNTT4_IT201_Session10_Bai01.c
        PTIT_CNTT4_IT201_Session10/PTIT_CNTT4_IT201_Session10_Bai02.c
        PTIT_CNTT4_IT201_Session10/PTIT_CNTT4_IT201_Session10_Bai03.c
        PTIT_CNTT4_IT201_Session10/PTIT_CNTT4_IT201_Session10_Bai04.c
        PTIT_CNTT4_IT201_Session10/PTIT_CNTT4_IT201_Session10_Bai05.c
        PTIT_CNTT4_IT201_Session10/PTIT_CNTT4_IT201_Session10_Bai06.c
        PTIT_CNTT4_IT201_Session11/PTIT_CNTT4_IT201_Session11_Bai01.c
        PTIT_CNTT4_IT201_Session11/PTIT_CNTT4_IT201_Session11_Bai02.c
        PTIT_CNTT4_IT201_Session11/PTIT_CNTT4_IT201_Session11_Bai03.c
        PTIT_CNTT4_IT201_Session11/PTIT_CNTT4_IT201_Session11_Bai04.c
        PTIT_CNTT4_IT201_Session11/PTIT_CNTT4_IT201_Session11_Bai05.c
        PTIT_CNTT4_IT201_Session11/PTIT_CNTT4_IT201_Session11_Bai06.c
        PTIT_CNTT4_IT201_Session11/PTIT_CNTT4_IT201_Session11_Bai07.c
        PTIT_CNTT4_IT201_Session11/PTIT_CNTT4_IT201_Session11_Bai08.c
        PTIT_CNTT4_IT201_Session11/test.c
        PTIT_CNTT4_IT201_Session12/test.c
        PTIT_CNTT4_IT201_Session12/PTIT_CNTT4_IT201_Session12_Bai01.c
        PTIT_CNTT4_IT201_Session12/PTIT_CNTT4_IT201_Session12_Bai02.c
        PTIT_CNTT4_IT201_Session12/PTIT_CNTT4_IT201_Session12_Bai03.c
        PTIT_CNTT4_IT201_Session12/PTIT_CNTT4_IT201_Session12_Bai04.c
        PTIT_CNTT4_IT201_Session12/PTIT_CNTT4_IT201_Session12_Bai05.c
        PTIT_CNTT4_IT201_Session12/PTIT_CNTT4_IT201_Session12_Bai06.c
        PTIT_CNTT4_IT201_Session12/PTIT_CNTT4_IT201_Session12_Bai07.c
        PTIT_CNTT4_IT201_Session13/PTIT_CNTT4_IT201_Session13_Bai01.c
        PTIT_CNTT4_IT201_Session13/PTIT_CNTT4_IT201_Session13_Bai02.c
        PTIT_CNTT4_IT201_Session13/PTIT_CNTT4_IT201_Session13_Bai03.c
        PTIT_CNTT4_IT201_Session13/PTIT_CNTT4_IT201_Session13_Bai04.c
        PTIT_CNTT4_IT201_Session13/PTIT_CNTT4_IT201_Session13_Bai05.c
        PTIT_CNTT4_IT201_Session13/PTIT_CNTT4_IT201_Session13_Bai06.c
        PTIT_CNTT4_IT201_Session13/PTIT_CNTT4_IT201_Session13_Bai07.c
        PTIT_CNTT4_IT201_Session13/PTIT_CNTT4_IT201_Session13_Bai08.c
        PTIT_CNTT4_IT201_Session14/test.c
        PTIT_CNTT4_IT201_Session14/PTIT_CNTT4_IT201_Session14_Bai01.c
        PTIT_CNTT4_IT201_Session14/PTIT_CNTT4_IT201_Session14_Bai02.c
        PTIT_CNTT4_IT201_Session14/PTIT_CNTT4_IT201_Session14_Bai03.c
        PTIT_CNTT4_IT201_Session14/PTIT_CNTT4_IT201_Session14_Bai04.c
        PTIT_CNTT4_IT201_Session14/PTIT_CNTT4_IT201_Session14_Bai05.c
        PTIT_CNTT4_IT201_Session15/PTIT_CTT4_IT201_Session15_Bai01.c
        PTIT_CNTT4_IT201_Session15/PTIT_CTT4_IT201_Session15_Bai02.c
        PTIT_CNTT4_IT201_Session15/PTIT_CTT4_IT201_Session15_Bai03.c
        PTIT_CNTT4_IT201_Session15/PTIT_CTT4_IT201_Session15_Bai04.c
        PTIT_CNTT4_IT201_Session15/PTIT_CTT4_IT201_Session15_Bai05.c
        PTIT_CNTT4_IT201_Session15/PTIT_CTT4_IT201_Session15_Bai06.c
        PTIT_CNTT4_IT201_Session15/PTIT_CTT4_IT201_Session15_Bai08.c
        PTIT_CNTT4_IT201_Session15/PTIT_CNTT4_IT201_Session15_Bai07.c
        PTIT_CNTT4_IT201_OnTapHackathon/Queue.c
        "PTIT_CNTT4_IT201_OnTapHackathon/Linked List.c"
        PTIT_CNTT4_IT201_OnTapHackathon/Stack.c
        PTIT_CNTT4_IT201_OnTapHackathon/Demo.c
        PTIT_CNTT4_IT201_Session16/PTIT_CNTT4_IT201_Session16_Bai01.c
        PTIT_CNTT4_IT201_Session16/PTIT_CNTT4_IT201_Session16_Bai02.c
        PTIT_CNTT4_IT201_Session16/PTIT_CNTT4_IT201_Session16_Bai03.c
        PTIT_CNTT4_IT201_Session16/PTIT_CNTT4_IT201_Session16_Bai04.c
        PTIT_CNTT4_IT201_Session16/PTIT_CNTT4_IT201_Session16_Bai05.c
        PTIT_CNTT4_IT201_Session16/PTIT_CNTT4_IT201_Session16_Bai06.c
        PTIT_CNTT4_IT201_OnTapHackathon/call_history.c
        PTIT_CNTT4_IT201_OnTapHackathon/callcallcall.c
        PTIT_CNTT4_IT201_OnTapHackathon/demo_hackthon_thayAn.c
        HN_KS24_CNTT4_NguyenTriThang/hackathon_bai01.c
        HN_KS24_CNTT4_NguyenTriThang/hackathon_bai02.c
        HN_KS24_CNTT4_NguyenTriThang/hackathon07_bai01.c
        PTIT_CNTT4_IT201_Session19/PTIT_CNTT4_IT201_Session19_Bai01.c
        PTIT_CNTT4_IT201_Session19/PTIT_CNTT4_IT201_Session19_Bai02.c
        PTIT_CNTT4_IT201_Session19/PTIT_CNTT4_IT201_Session19_Bai03.c
        PTIT_CNTT4_IT201_Session19/PTIT_CNTT4_IT201_Session19_Bai04.c
        PTIT_CNTT4_IT201_Session19/PTIT_CNTT4_IT201_Session19_Bai05.c
        PTIT_CNTT4_IT201_Session19/PTIT_CNTT4_IT201_Session19_Bai06.c
        PTIT_CNTT4_IT201_Session19/PTIT_CNTT4_IT201_Session19_Bai08.c
        PTIT_CNTT4_IT201_Session19/demo.c
        PTIT_CNTT4_IT201_Session20/demo.c
        PTIT_CNTT4_IT201_Session20/PTIT_CNTT4_IT201_Session20_Bai01.c
        PTIT_CNTT4_IT201_Session20/PTIT_CNTT4_IT201_Session20_Bai02.c
        PTIT_CNTT4_IT201_Session20/PTIT_CNTT4_IT201_Session20_Bai03.c
        PTIT_CNTT4_IT201_Session20/PTIT_CNTT4_IT201_Session20_Bai04.c
        PTIT_CNTT4_IT201_Session20/PTIT_CNTT4_IT201_Session20_Bai05.c
        PTIT_CNTT4_IT201_Session20/PTIT_CNTT4_IT201_Session20_Bai06.c
        PTIT_CNTT4_IT201_Session21/PTIT_CNTT4_IT201_Session21_Bai01.c
        PTIT_CNTT4_IT201_Session21/PTIT_CNTT4_IT201_Session21_Bai02.c
        PTIT_CNTT4_IT201_Session21/PTIT_CNTT4_IT201_Session21_Bai03.c
        PTIT_CNTT4_IT201_Session21/PTIT_CNTT4_IT201_Session21_Bai04.c
        PTIT_CNTT4_IT201_Session21/PTIT_CNTT4_IT201_Session21_Bai05.c
        PTIT_CNTT4_IT201_Session22/PTIT_CNTT4_IT201_Session022_Bai01.c
        PTIT_CNTT4_IT201_Session22/PTIT_CNTT4_IT201_Session022_Bai02.c
        PTIT_CNTT4_IT201_Session22/PTIT_CNTT4_IT201_Session022_Bai03.c
        PTIT_CNTT4_IT201_Session22/PTIT_CNTT4_IT201_Session022_Bai04.c
        PTIT_CNTT4_IT201_Session22/PTIT_CNTT4_IT201_Session022_Bai05.c
        Stack.c
        Queue.c
        demo_kiemtra/baitap1.c
)
